kube-manifest.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kompose.cmd: kompose convert -f docker-compose.yml -o kube-manifest.yaml
      kompose.version: 1.18.0 (06a2e56)
    creationTimestamp: null
    labels:
      io.kompose.service: marketplace-microservice-backend
    name: marketplace-microservice-backend
  spec:
    type: NodePort
    ports:
    - name: "4200"
      port: 4200
      targetPort: 80
    selector:
      io.kompose.service: marketplace-microservice-backend
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kompose.cmd: kompose convert -f docker-compose.yml -o kube-manifest.yaml
      kompose.version: 1.18.0 (06a2e56)
    creationTimestamp: null
    labels:
      io.kompose.service: marketplace-microservice-backend-db
    name: marketplace-microservice-backend-db
  spec:
    type: ClusterIP
    ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
    selector:
      io.kompose.service: marketplace-microservice-backend-db
  status:
    loadBalancer: {}
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o kube-manifest.yaml
        kompose.version: 1.18.0 (06a2e56)
    creationTimestamp: null
    labels:
      io.kompose.service: marketplace-microservice-backend
    name: marketplace-microservice-backend
  spec:
    replicas: 1
    strategy: {}
    template:
      metadata:
        creationTimestamp: null
        labels:
          io.kompose.service: marketplace-microservice-backend
      spec:
        containers:
        - env:
          - name: ASPNETCORE_ENVIRONMENT
            value: Production
          - name: mongo_db
            value: mongodb://marketplace-microservice-backend-db:27017
          image: proflo/marketplace-microservice-backend:<VERSION>
          name: marketplace-microservice-backend
          ports:
          - containerPort: 80
          resources: {}
        restartPolicy: Always
  status: {}
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    annotations:
      kompose.cmd: kompose convert -f docker-compose.yml -o kube-manifest.yaml
      kompose.version: 1.18.0 (06a2e56)
    creationTimestamp: null
    labels:
      io.kompose.service: marketplace-microservice-backend-db
    name: marketplace-microservice-backend-db
  spec:
    replicas: 1
    strategy: {}
    template:
      metadata:
        creationTimestamp: null
        labels:
          io.kompose.service: marketplace-microservice-backend-db
      spec:
        containers:
        - image: mvertes/alpine-mongo
          name: marketplace-microservice-backend-db
          ports:
          - containerPort: 27017
          resources: {}
        restartPolicy: Always
  status: {}
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
   name: marketplace-microservice-backend-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
   rules:
   - host: marketplace-api.proflo.cgi-wave7.stackroute.io
     http:
       paths:
       - path: /
         backend:
           serviceName: marketplace-microservice-backend
           servicePort: 80
kind: List
metadata: {}
